--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
-body {
-    margin: 0;
-}
+div.info-area {
+    z-index: 2;
+    background-color: rgba(255, 255, 255, 0.90);
+    padding: 10px;
+    text-align: center;}
+  
+  button {
+    width: auto;
+    height: 35px;
+    margin: 15px;
+  }
 
-canvas {
-    width: 100vw;
-    height: 100vh;
-}
+  #overlay{
+      z-index: 999;
+      background-color: aliceblue;
+      text-align: center;
+      padding: 10px;
+      width: auto;
+      height: 40px;
+  }
