--- a/style.css
+++ b/style.css
@@ -11,10 +11,21 @@ div.info-area {
   }
 
   #overlay{
-      z-index: 999;
+      z-index: 2;
+      margin: 10px;
+ 
+  
+  }
+
+  #modelviewer{
+        margin-top: 20px;
+ 
+      width: 100vw;
+      height: 60vh;
+      z-index: 3;
+     
+  }
+
+  body{
       background-color: aliceblue;
-      text-align: center;
-      padding: 10px;
-      width: auto;
-      height: 40px;
   }
